--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<app-schedule-create></app-schedule-create>
+<div class="row">
+    <div class="container">      
+        <div class="col-md-12 offset-md-2">
+            <app-schedule-create></app-schedule-create>
+        </div>
+
+        <div class="col-md-12 offset-md-2">
+            <app-schedule-list></app-schedule-list>
+        
+        </div>
+    </div>
+</div>
