--- a/src/app/schedule-create/schedule-create.component.html
+++ b/src/app/schedule-create/schedule-create.component.html
@@ -1,25 +1,23 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-6">
-      <h1 class="display-4">Create an appointment</h1>
-        <form class="example-form" #form="ngForm" autocomplete="off" (submit)="onSubmit(form)">
-          <mat-form-field class="example-full-width">
-            <input matInput name="name" #name="ngModel" [(ngModel)]="scheduleService.formData.name" placeholder="Name" required>
-          </mat-form-field >
+    <div class="row">
+      <div class="col-md-6">
+        <h1 class="display-4">Create an appointment</h1>
+          <form class="example-form" #form="ngForm" autocomplete="off" (submit)="onSubmit(form)">
+            <mat-form-field class="example-full-width">
+              <input matInput name="name" #name="ngModel" [(ngModel)]="scheduleService.formData.name" placeholder="Name" required>
+            </mat-form-field >
+  
+            <mat-form-field class="example-full-width">
+              <input matInput name="appointment_date" [matDatepicker]="picker" #appointment_date="ngModel" [(ngModel)]="scheduleService.formData.appointment_date" placeholder="Choose a date">
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
 
-          <mat-form-field class="example-full-width">
-            <input matInput name="appointment_date" [matDatepicker]="picker" [(ngModel)]="scheduleService.formData.appointment_date" placeholder="Choose a date">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-          </mat-form-field>
-
-          
-
-          <div class="form-group">
-            <button type="submit" [disabled]="form.invalid" class="btn btn-lg btn-block btn-info">SUBMIT</button>
-          </div>
-
-        </form>
+            <div class="form-group">
+              <button type="submit" [disabled]="form.invalid" class="btn btn-lg btn-block btn-info">SUBMIT</button>
+            </div>
+  
+          </form>
+      </div>
     </div>
   </div>
-</div>
