--- a/src/app/schedule-list/schedule-list.component.html
+++ b/src/app/schedule-list/schedule-list.component.html
@@ -9,6 +9,7 @@
           </div>
           <div class="card-body">
             <span><small>Appointment Set:</small></span><p>{{ appoint.appointment_date.toDate() | date: 'MM/dd/yyyy' }}</p>
+            <span><small>Time:</small></span><p>{{ appoint.appointment_hour }}</p>
           </div>
       </div>
     </div>
