--- a/src/app/schedule-create/schedule-create.component.html
+++ b/src/app/schedule-create/schedule-create.component.html
@@ -3,7 +3,10 @@
       <div class="col-md-6">
         <h1 class="display-4">Create an appointment</h1>
           <form class="example-form" #form="ngForm" autocomplete="off" (submit)="onSubmit(form)">
-            <mat-form-field class="example-full-width">
+              <input type="hidden"  name="eid" #eid="ngModel" [(ngModel)]="scheduleService.formData.eid">
+            
+            
+              <mat-form-field class="example-full-width">
               <input matInput name="name" #name="ngModel" [(ngModel)]="scheduleService.formData.name" placeholder="Name" required>
             </mat-form-field >
 
@@ -20,9 +23,9 @@
                      placeholder="Set Hour"
                      #appointment_hour="ngModel" [(ngModel)]="scheduleService.formData.appointment_hour"
                      name="appointment_hour"
-                     [ngxTimepicker]="defaultValue" [value]="" readonly>
+                     [ngxTimepicker]="defaultValue" [value]="" readonly="readonly">
               <ngx-material-timepicker #defaultValue></ngx-material-timepicker>
-          </div>
+            </div>
 
             <div class="form-group">
               <button type="submit" [disabled]="form.invalid" class="btn btn-lg btn-block btn-info">SUBMIT</button>
