--- a/src/app/schedule-list/schedule-list.component.html
+++ b/src/app/schedule-list/schedule-list.component.html
@@ -6,7 +6,7 @@
           <div class="card-header">
               Name: {{appoint.name}}
               <a href="#" class="secondary-content float-right">
-                <i (click)="deleteSchedule($event, schedule)" class="fa fa-trash"></i>
+                <i (click)="deleteSchedule($event, appoint)" class="fa fa-trash"></i>
               </a>
         
           </div>
@@ -14,6 +14,7 @@
           <div class="card-body">
             <span><small>Appointment Set:</small></span><p>{{ appoint.appointment_date.toDate() | date: 'MM/dd/yyyy' }}</p>
             <span><small>Time:</small></span><p>{{ appoint.appointment_hour }}</p>
+            <span> {{ appoint | json }}</span>
           </div>
       </div>
     </div>
