--- a/src/app/schedule-create/schedule-create.component.html
+++ b/src/app/schedule-create/schedule-create.component.html
@@ -3,7 +3,7 @@
       <div class="col-md-6">
         <h1 class="display-4">Create an appointment</h1>
           <form class="example-form" #form="ngForm" autocomplete="off" (submit)="onSubmit(form)">
-              <input type="hidden"  name="eid" #eid="ngModel" [(ngModel)]="scheduleService.formData.eid">
+              <input type="hidden"  name="id" #id="ngModel" [(ngModel)]="scheduleService.formData.id">
             
             
               <mat-form-field class="example-full-width">
